test/invalid/stringmap-preds.js
var m = { 'hi': function(x,y) { return x + y; },
          'baoo': function(x,y) { return x; }
        };

m['hi'](false, true);
